{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 5,
  "lineage": "19a5d2b8-2f92-580b-d754-92f3405b4be4",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-00fe7ee12c7c54dbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-00fe7ee12c7c54dbe",
            "map_public_ip_on_launch": true,
            "owner_id": "216659404274",
            "state": "available",
            "tags": {
              "Name": "10.0.1.0/ap-southeast-2a/public"
            },
            "vpc_id": "vpc-0360353734b9ac4e1"
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:security-group/sg-0408a1c43558fe6f8",
            "description": "Allow SSH access to bastion host and outbound internet access",
            "egress": [],
            "id": "sg-0408a1c43558fe6f8",
            "ingress": [],
            "name": "Bastion host of dockerzon",
            "name_prefix": null,
            "owner_id": "216659404274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "dockerzon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0360353734b9ac4e1"
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1249770544",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0408a1c43558fe6f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "intranet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.5.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-648404943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0408a1c43558fe6f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3466937513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0408a1c43558fe6f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion"
          ]
        }
      ]
    }
  ]
}